<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/xml_background_curved_white"
        tools:context=".dialogs.ShowInfoDialog">

        <LinearLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/header_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="0.8"
                android:gravity="start"
                android:padding="6dp"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:contentDescription="@string/materials"
                android:padding="6dp"
                android:scaleType="fitCenter"
                android:src="@drawable/input_text" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/titleLayout"
            android:background="@color/spinnerDisabledFontColor" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_margin="10dp"
            android:labelFor="@id/etData">

            <EditText
                android:id="@+id/etData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputData"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/xml_selector_button"
                android:text="@string/btn_cancel"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnOk"
                style="?android:attr/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@drawable/xml_selector_button"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>
</layout>